<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_pass"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="com.stk.ui.EditPassActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/update_pass"
            android:textColor="@color/layoutBackground"
            android:textSize="20sp"/>

        <ImageView
            android:id="@+id/pass_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            app:srcCompat="@drawable/back"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/pass_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="34dp"
        android:hint="@string/new_pass"
        android:inputType="textPassword"
        android:textColor="@color/blackk"
        android:textColorHint="@color/editTextColor"/>

    <EditText
        android:id="@+id/re_pass_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:hint="@string/re_pass"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:inputType="textPassword"
        android:textColor="@color/blackk"
        android:textColorHint="@color/editTextColor"
        android:layout_below="@+id/pass_edit"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:id="@+id/warn_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="@+id/pass_edit"
        android:layout_below="@+id/re_pass_edit"
        android:layout_marginTop="11dp"
        android:layout_marginLeft="20dp"
        android:visibility="invisible"
        android:text="@string/pass_tip"/>

    <Button
        android:id="@+id/pass_edit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/warn_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_btn_selector"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:textColor="@color/white"
        android:text="@string/btn_txt"
        android:textSize="18sp"/>

</RelativeLayout>
