<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_edit_phone"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="com.stk.ui.EditPhoneActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/phone_edit"
            android:textColor="@color/layoutBackground"
            android:textSize="20sp"/>
        <ImageView
            android:id="@+id/phone_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            app:srcCompat="@drawable/back"/>
    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="phone"
        android:textColor="@color/blackk"
        android:hint="@string/new_phone"
        android:textColorHint="@color/editTextColor"
        android:layout_marginTop="33dp"
        android:id="@+id/phone_edit"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"/>
    <TextView
        android:text="phone_warn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_edit"
        android:layout_alignLeft="@+id/phone_edit"
        android:layout_marginTop="18dp"
        android:visibility="invisible"
        android:id="@+id/phone_warn"/>
    <Button
        android:text="@string/btn_phone"
        android:textSize="18sp"
        android:background="@drawable/edit_btn_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="22dp"
        android:textColor="@color/white"
        android:id="@+id/phone_edit_button"
        android:layout_below="@+id/phone_warn"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>
